...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/logoLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message_content_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="TextView"
            android:textSize="20sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/message_favourite_checkbox"
            app:layout_constraintStart_toEndOf="@+id/logoLayout"
            app:layout_constraintTop_toBottomOf="@+id/message_title_text" />

        <CheckBox
            style="?android:attr/starStyle"
            android:id="@+id/message_favourite_checkbox"
...
